@@ -21,6 +21,8 @@ BACKGROUND_RENDERER_FILES = Game/Src/BackgroundRenderer/BackgroundImageRenderer.
 
 GAME_COMPILER_FILES = Game/Src/GameCompilerEntryPoint.cpp Game/Src/GameCompiler/GameCompiler.cpp Game/Src/GameCompiler/ProjectBuilder.cpp Game/Src/GameCompiler/ChapterBuilder.cpp Game/Src/GameCompiler/ResourceBuilder.cpp Game/Src/Misc/Utils.cpp
 
+NOVEL_DATA = Game/Src/VisualNovelEngine/Classes/Data/Character.cpp
+
 BUILD_STRING = -DCURRENT_BRANCH=$(GITVER) -DCURRENT_COMMIT=$(REVISION)
 BUILD_STRING_WITHOUT_DEFINES = $(DIRECTORIES_TO_INCLUDE) -DCURRENT_BRANCH=$(GITVER) -DCURRENT_COMMIT=$(REVISION) $(GAME_FRAMEWORK_FILES) $(AUDIO_MANAGER_FILES) $(INPUT_MANAGER_FILES) $(RESOURCE_MANAGER_FILES) $(DATABASE_FILES) $(FONT_MANAGER_FILES) $(TEXT_RENDERER_FILES) $(FILES_TO_COMPILE) $(BACKGROUND_RENDERER_FILES) $(VISUAL_NOVEL_ENGINE_FILES) $(LIBRARIES) -o build/TaleScripter-Runner
 
@@ -31,4 +33,4 @@ single-threaded-rendering:
 	$(CC) $(CFLAGS) $(BUILD_STRING_WITHOUT_DEFINES)
 
 compiler:
-	$(CC) $(CFLAGS) $(DIRECTORIES_TO_INCLUDE) $(GAME_COMPILER_FILES) $(DATABASE_FILES) $(LIBRARIES) $(BUILD_STRING) -o build/TaleScripter-compiler
+	$(CC) $(CFLAGS) $(DIRECTORIES_TO_INCLUDE) $(GAME_COMPILER_FILES) $(DATABASE_FILES) $(NOVEL_DATA) $(LIBRARIES) $(BUILD_STRING) -o build/TaleScripter-compiler
