@@ -2,6 +2,7 @@
 
 Changes from v0.3.1:
 
+Character sprite information is now read from Characters/Characters.json and saved into the databased linked to the correct characters.
 Textures information is now read from the database and texture files are loaded into memory.
 Textures are now read from Textures/Textures.json and saved into the database by the GameCompiler.
 
